cross origin added

--- a/BackendRVA/src/main/resources/application.properties
+++ b/BackendRVA/src/main/resources/application.properties
@@ -16,4 +16,4 @@ spring.jackson.serialization.fail-on-empty-beans = false
 
 spring.jpa.hibernate.ddl-auto = create
 spring.datasource.initialization-mode=always
-spring.datasource.data=classpath:/sql-scripts/InsertScript.sql
+spring.datasource.data=classpath:/sql-scripts/insertInto.sql
